internal/xds/translator/testdata/out/xds-ir/merge-backends-shared-cluster-grpc.routes.yaml
- ignorePortInHostMatching: true
  name: envoy-gateway/gateway-1/http
  virtualHosts:
  - domains:
    - '*'
    metadata:
      filterMetadata:
        envoy-gateway:
          resources:
          - kind: Gateway
            name: gateway-1
            namespace: envoy-gateway
            sectionName: http
    name: envoy-gateway/gateway-1/http/*
    routes:
    - match:
        headers:
        - name: magic
          stringMatch:
            exact: foo
        prefix: /
      metadata:
        filterMetadata:
          envoy-gateway:
            resources:
            - kind: GRPCRoute
              name: grpc-route-1
              namespace: default
      name: grpcroute/default/grpc-route-1/rule/0/match/0/*
      route:
        cluster: service/default/service-1/8080/grpc
    - match:
        headers:
        - name: magic
          stringMatch:
            exact: bar
        prefix: /
      metadata:
        filterMetadata:
          envoy-gateway:
            resources:
            - kind: GRPCRoute
              name: grpc-route-2
              namespace: default
      name: grpcroute/default/grpc-route-2/rule/0/match/0/*
      route:
        cluster: service/default/service-1/8080/grpc
